# picard-chebyshev

./: CMakeLists.txt  PlotMagnitudeErrors.py  PlotPositionAndVelocity.py  README.md  keplerUniversal.c  keplerUniversal.h  kepleruniversal.c  kepleruniversal.h  main.c  matlab.c  matlab.h  picardchebyshevdemo.c  picardchebyshevdemo.h  requirements.txt  vmpcm.c  vmpcm.h
doc/html/: _c_make_c_compiler_id_8c.html  _c_make_cache_8txt.html  _c_make_lists_8txt.html  _plot_magnitude_errors_8py.html  _plot_position_and_velocity_8py.html  _r_e_a_d_m_e_8md.html  _target_directories_8txt.html  clion-environment_8txt.html  clion-log_8txt.html  dir_41b9fbeb69ad6f5180ac53fc1c43d38b.html  dir_446351169ee532ade2675c0f4b81e6b6.html  dir_4d7be947362df13686123d6563352e9b.html  dir_81b1fef94666c87a9c931b85a8b2ffc1.html  dir_8768283540061342ac0027e9a7defb23.html  dir_d87e78231ab64c14fab09e6a33838e23.html  dir_e2320f2f9fa9d47efd9522ce5fe2b4c4.html  doxygen.css  dynsections.js  files.html  globals.html  globals_a.html  globals_c.html  globals_d.html  globals_defs.html  globals_f.html  globals_func.html  globals_h.html  globals_i.html  globals_k.html  globals_l.html  globals_m.html  globals_o.html  globals_p.html  globals_s.html  globals_u.html  globals_vars.html  globals_vars_c.html  globals_vars_d.html  globals_vars_f.html  globals_vars_h.html  (+61 more)
doc/latex/: _c_make_c_compiler_id_8c.tex  _c_make_cache_8txt.tex  files.tex  (+24 more)
src/: kepleruniversal.c  kepleruniversal.h  matlab.c  matlab.h  picardchebyshevdemo.c  picardchebyshevdemo.h  vmpcm.c  vmpcm.h
test/: main_test.c  matlab_test.c  matlab_test.h
(+80 files in other folders)
